ez day 6